# skillmatch

./: .gitignore  Dockerfile  Jenkinsfile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt  skillmatch.toml  test_main.http
.github/workflows/: ci.yml  python-app.yml
app/: main.py
app/api/: api_router.py  dependencies.py
app/config/: settings.py
app/core/: config.py  enums.py  exceptions.py  lifespan.py  logging_config.py  middleware.py  redis_client.py  security.py  settings.py
app/db/: base.py  init_db.py  mixins.py  session.py
app/dependencies/: application.py  auth.py  cache.py  company.py  jobs.py  redis.py  user.py
app/messaging/: connection.py  producer.py
app/models/: __init__.py  application.py  applications.py  base.py  candidate.py  candidate_profile.py  company.py  employer_profile.py  job.py  job_application.py  mixins.py  portfolio.py  project.py  skill.py  user.py  user_skill.py
app/repositories/: application_repository.py  auth.py  base.py  candidate_profile_repository.py  company_repository.py  job_application_repository.py  job_repository.py  jobs.py  user_repository.py  users_repository.py
app/schemas/: application.py  auth.py  candidate_profile.py  company.py  job.py  job_application.py  portfolio.py  project.py  skill.py  user.py
app/security/: password_hasher.py  token_manager.py
app/services/: application_service.py  auth.py  auth_service.py  cache_service.py  company_service.py  email_service.py  job_application_service.py  (+4 more)
test/: conftest.py  test_healthcheck.py  test_users.py
tests/: test_main.py
(+28 files in other folders)
